Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -701,7 +701,7 @@
     }
    ],
    "source": [
-    "manhattan_map = map_from([40.7589, -73.9851], 13)\n"
+    "manhattan_map = map_from([40.7589, -73.9851], 13)"
    ]
   },
   {
