Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -699,19 +699,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        marker.add_to(map_obj)\n",
-    "    return map_obj"
+    "        market\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
