Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -773,7 +773,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    \n",
+    "    selected_trip['pickup_latitude']-neighbor_trip['pic']\n",
     "    pass"
    ]
   },
