--- a/index.ipynb
+++ b/index.ipynb
@@ -817,7 +817,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    \n",
+    "    neighbor\n",
     "    pass"
    ]
   },
