Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -881,7 +881,7 @@
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))\n",
-    "    unique_distances_\n",
+    "    unique_distances_list = list(filter(lambda neighbor: neighbor['']))\n",
     "    pass"
    ]
   },
