Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -880,8 +880,8 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
+    "    unique_neighbors = list(filter(lambda neighbor: neighbor != selected))\n",
     "    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))\n",
-    "    unique_distances_list = list(filter(lambda neighbor: neighbor['distance_from_selected'] != 0, distances_list))\n",
     "    return unique_distances_list\n",
     "    pass"
    ]
