--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -875,12 +875,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-52-dd6186095e2c>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-52-dd6186095e2c>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), unique_neighbors))\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    unique_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
+    "    unique_neighbors = list(filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
     "    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), unique_neighbors))\n",
     "    return distances_list\n",
     "    pass"
@@ -888,17 +897,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'trip_distance': 18.38,\n",
-       "  'pickup_latitude': 40.64499,\n",
-       "  'pickup_longitude': -73.78115,\n",
-       "  'distance_from_selected': 0.0},\n",
-       " {'trip_distance': 1.3,\n",
+       "[{'trip_distance': 1.3,\n",
        "  'pickup_latitude': 40.766931,\n",
        "  'pickup_longitude': -73.982098,\n",
        "  'distance_from_selected': 0.23505256047318146},\n",
@@ -912,7 +917,7 @@
        "  'distance_from_selected': 0.24242215976473674}]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
