--- a/index.ipynb
+++ b/index.ipynb
@@ -875,12 +875,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    unique_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
+    "    unique_neighbors = list(filter(lambda neighbor: neighbor != selected_individual, neighbors))\n",
     "    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), unique_neighbors))\n",
     "    return distances_list\n",
     "    pass"
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "  'distance_from_selected': 0.24242215976473674}]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
