Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -875,14 +875,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    unique_neighbors = list(filter(lambda neighbor: neighbor != selected_individual, neighbors))\n",
     "    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), unique_neighbors))\n",
-    "    return unique_neighbors[0]\n",
+    "    return unique_neighbors[0] == first_trip\n",
     "    pass"
    ]
   },
