Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -875,32 +875,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    unique_neighbors = list(filter(lambda neighbor: neighbor != selected_individual, neighbors))\n",
     "    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), unique_neighbors))\n",
-    "    return unique_neighbors[0] == first_trip\n",
+    "    return neighbors[0] == first_trip\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'trip_distance': 18.38,\n",
-       " 'pickup_latitude': 40.64499,\n",
-       " 'pickup_longitude': -73.78115,\n",
-       " 'distance_from_selected': 0.0}"
+       "False"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
