Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -812,20 +812,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
     "    new_neighbor_trip = neighbor_trip.copy()\n",
-    "    neighbor_trip.update({'distance_from_selected': distance_location(selected_trip, neighbor_trip)})\n",
-    "    return neighbor_trip\n",
+    "    new_neighbor_trip.update({'distance_from_selected': distance_location(selected_trip, neighbor_trip)})\n",
+    "    return new_neighbor_trip\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        " 'distance_from_selected': 0.23505256047318146}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        " dict_values([40.64499, -73.78115, 18.38]))"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
