Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -876,30 +876,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    unique_neighbors = list(filter(lambda neighbor: neighbor != selected_individual, neighbors))\n",
     "    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), unique_neighbors))\n",
-    "    return neighbors[0].values(), first_trip.values()\n",
+    "    return neighbors[0], first_trip\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(dict_values([18.38, 40.64499, -73.78115, 0.0]),\n",
-       " dict_values([40.64499, -73.78115, 18.38]))"
+       "({'trip_distance': 18.38,\n",
+       "  'pickup_latitude': 40.64499,\n",
+       "  'pickup_longitude': -73.78115,\n",
+       "  'distance_from_selected': 0.0},\n",
+       " {'pickup_latitude': 40.64499,\n",
+       "  'pickup_longitude': -73.78115,\n",
+       "  'trip_distance': 18.38})"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
