Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -883,7 +883,7 @@
     "def distance_all(selected_individual, neighbors):\n",
     "    unique_neighbors = list(filter(lambda neighbor: neighbor != selected_individual, neighbors))\n",
     "    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), unique_neighbors))\n",
-    "    return neighbors[0]['trip_distance']==first_trip\n",
+    "    return neighbors[0], first_trip\n",
     "    pass"
    ]
   },
