Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -876,29 +876,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    unique_neighbors = list(filter(lambda neighbor: neighbor['trip_distance']!=selected_individual['trip_distance'], neighbors))\n",
     "    distances_list = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), unique_neighbors))\n",
-    "    return len(neighbors), len(unique_neighbors), di\n",
+    "    return len(neighbors), len(unique_neighbors), len(distances_list)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4, 3)"
+       "(4, 3, 3)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
