Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -927,20 +927,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    all_distances = distance_all(selected_trip, trips)\n",
     "    sorted_distances = sorted(trips, key=lambda trip: trip['distance_from_selected'])\n",
+    "    filtered = list\n",
     "    return sorted_distances[:number]\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +961,7 @@
        "  'distance_from_selected': 0.0011292165425673159}]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
