--- a/index.ipynb
+++ b/index.ipynb
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,27 +941,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'trip_distance': 18.38,\n",
-       "  'pickup_latitude': 40.64499,\n",
-       "  'pickup_longitude': -73.78115,\n",
-       "  'distance_from_selected': 0.0},\n",
-       " {'trip_distance': 7.78,\n",
+       "[{'trip_distance': 7.78,\n",
        "  'pickup_latitude': 40.64483,\n",
        "  'pickup_longitude': -73.781578,\n",
        "  'distance_from_selected': 0.0004569288784918792},\n",
        " {'trip_distance': 12.7,\n",
        "  'pickup_latitude': 40.644657,\n",
        "  'pickup_longitude': -73.782229,\n",
-       "  'distance_from_selected': 0.0011292165425673159}]"
+       "  'distance_from_selected': 0.0011292165425673159},\n",
+       " {'trip_distance': 17.3,\n",
+       "  'pickup_latitude': 40.648509,\n",
+       "  'pickup_longitude': -73.783508,\n",
+       "  'distance_from_selected': 0.0042359798158141185}]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
